# milla-pilot

./: .gitignore  AGENTS.md  CLAUDE.md
.github/workflows/: ci.yml  deploy.yml
docs/: design-system.md  donation-model.md  frontend-conventions.md
docs-for-프로젝트 문서/기획 문서/: Hybrid_Daglo_ClaudeCode_Manual_V3_2.docx  시설단위_물품후원_제휴타깃_전략.docx  학교 1차 MVP 캠페인 실행 보고서 v0.1.docx  학교_시설_컨택_전략_및_통화스크립트_v0.1.docx  학교_시설별_구매업무_위탁형_운영구조_상세검토보고서.docx
docs-for-프로젝트 문서/실행 관련/: backend-dev-spec.html  frontend-dev-spec.html  runbook.html
docs-for-프로젝트 문서0/코덱스 스킬 관련/: 스킬 목록 및 사용법.html  코덱스 스킬이란.html
docs-for-프로젝트 문서0/클로드 스킬 관련/: milla-donation-deploy 배포 스킬.md
docs-for-프로젝트 문서0/포트원 결제 진행 현황/: index.html  카카오 결제로 물품 후원액 결제 하기.mmd
docs-for-프로젝트 문서0/포트원 관련 정보 모음/: portone_info.md  상점 관련 실결제 정보.md
docs-for-프로젝트 문서0/후원금 결제에 관한 논의/: README.md  erd.mmd  index.html
docs-for-프로젝트 문서1/tauri 앱 업데이트 관련/: tauri-update-release-guide.html
donatin-platform-MainPages/: index.html  package-lock.json  package.json  vite.config.js  학교매점-메인화면-실행.cmd
donation-admin-tauri/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
donation-admin-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
donation-admin-tauri/src-tauri/capabilities/: default.json
donation-admin-tauri/src-tauri/src/: lib.rs  main.rs
donation-platform-front/: README.md  env.example.txt  next.config.ts  package-lock.json  package.json
donation-platform-server/: .env.example  README.md  build.gradle  docker-compose.yml  settings.gradle
(+430 files in other folders)
